# THMB02S-MQTT

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  ble_config.c  ble_config.h  idf_component.yml  main.c  modbus_service.c  modbus_service.h  network_manager.c  network_manager.h
